# CudaFractals

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cudaFractal.cu  fractal.cbp  fractalRace.sh  serialFractal.cpp
